<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFaceBook">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextEmailL"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/facebooklogo" />

    <EditText
        android:id="@+id/TextEmailL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50px"
        android:ems="12"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/TextPasswordL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextEmailL"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50px"
        android:ems="12"
        android:hint="@string/Pass"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonLogin2"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextPasswordL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/Login" />

    <Button
        android:id="@+id/buttonnewacount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/blue"
        android:text="Create new facebook account"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


</RelativeLayout>