<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonComment.ButtonCommentFragmentWatch"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/Silver">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Todo 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/watchava6"
                app:civ_border_color="#C0C0C0"
                app:civ_border_width="1dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/cmw3"/>
        </LinearLayout>

        <!--Todo 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/watchava8"
                android:layout_weight="1"
                app:civ_border_color="#C0C0C0"
                app:civ_border_width="1dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/cmw3b"/>
        </LinearLayout>

        <!--Todo 3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/watchava10"
                android:layout_weight="1"
                app:civ_border_color="#C0C0C0"
                app:civ_border_width="1dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/cmw3c"/>
        </LinearLayout>

        <!--Todo 4-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/watchava9"
                android:layout_weight="1"
                app:civ_border_color="#C0C0C0"
                app:civ_border_width="1dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/cmw3d"/>
        </LinearLayout>

        <!--Todo 5-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:weightSum="4">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/watchava7"
                android:layout_weight="1"
                app:civ_border_color="#C0C0C0"
                app:civ_border_width="1dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/cmw3e"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>