<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationDetail.DetailNotification3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:weightSum="4"
            android:padding="5dp"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/profile"
                app:civ_border_color="#C0C0C0"
                app:civ_border_width="1dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/com3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/detail3" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/newlike_comment" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp"
                    android:src="@drawable/newlove" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="4.4K" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/New2h" />

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:background="@null"
                android:backgroundTint="@color/Silver"
                android:drawableLeft="@drawable/likes"
                android:gravity="center"
                android:text="like"
                android:textColor="@android:color/black"
                app:iconPadding="5dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/Silver"
                android:drawableLeft="@drawable/ic_stat_name"
                android:paddingLeft="10dp"
                android:text="Comment"
                android:textColor="@android:color/black"
                android:visibility="visible"
                app:iconPadding="2dp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:backgroundTint="@color/Silver"
                android:drawableLeft="@drawable/ic_share_name"
                android:gravity="center"
                android:text="Share"
                android:textColor="@android:color/black"
                app:iconPadding="5dp"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Silver">
            <!--Todo 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:padding="5dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/avata1"
                    app:civ_border_color="#C0C0C0"
                    app:civ_border_width="1dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/t1c1"/>
            </LinearLayout>

            <!--Todo 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:padding="5dp"
                android:orientation="horizontal"
                android:weightSum="4">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ava4"
                    android:layout_weight="1"
                    app:civ_border_color="#C0C0C0"
                    app:civ_border_width="1dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/t2c1"/>
            </LinearLayout>

            <!--Todo 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:padding="5dp"
                android:orientation="horizontal"
                android:weightSum="4">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/avata4"
                    android:layout_weight="1"
                    app:civ_border_color="#C0C0C0"
                    app:civ_border_width="1dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/t2c4"/>
            </LinearLayout>

            <!--Todo 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:padding="5dp"
                android:orientation="horizontal"
                android:weightSum="4">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/eco"
                    android:layout_weight="1"
                    app:civ_border_color="#C0C0C0"
                    app:civ_border_width="1dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/com2"/>
            </LinearLayout>

            <!--Todo 5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:padding="5dp"
                android:orientation="horizontal"
                android:weightSum="4">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/avata5"
                    android:layout_weight="1"
                    app:civ_border_color="#C0C0C0"
                    app:civ_border_width="1dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/com1"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>